refactor: separación de colecciones y mejoras en caso de uso.